attempted to fix svg issue

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           <h1 class="introInfo"><b>Siming Yang</b></h1>
           <h6 class="introInfo"><b>Web Developer</b></h6>
           <div id="buttonBar">
-            <a class="linkButton" target="_blank" href="https://docs.google.com/document/d/1XobSq-yw2Ghcf-QTAg7a-nwWmMG9v8olhy9_N5DbRtE/edit?usp=sharing"><img src="/images/icons/file-text.svg" ></a>
-            <a class="linkButton" target="_blank" href="https://github.com/yangsiming99"><img src="/images/icons/github.svg" ></a>
-            <a class="linkButton" target="_blank" href="https://www.linkedin.com/in/siming-yang/"><img src="/images/icons/linkedin.svg" ></a>
-            <a class="linkButton" target="_blank" href="mailto:yang.siming@Outlook.com?subject=Mail From the Portfolio"><img src="/images/icons/mail.svg" ></a>
+            <a class="linkButton" target="_blank" href="https://docs.google.com/document/d/1XobSq-yw2Ghcf-QTAg7a-nwWmMG9v8olhy9_N5DbRtE/edit?usp=sharing"><img src="images/icons/file-text.svg" ></a>
+            <a class="linkButton" target="_blank" href="https://github.com/yangsiming99"><img src="images/icons/github.svg" ></a>
+            <a class="linkButton" target="_blank" href="https://www.linkedin.com/in/siming-yang/"><img src="images/icons/linkedin.svg" ></a>
+            <a class="linkButton" target="_blank" href="mailto:yang.siming@Outlook.com?subject=Mail From the Portfolio"><img src="images/icons/mail.svg" ></a>
           </div>
         </div>
       </div>
