--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div id="hhRight">
         <div id="hhNameInfo">
-          <h6 class="introInfo">Hello, this is the Portfolio site of</h6>
+          <h6 class="introInfo">Hello, this is the portfolio site of</h6>
           <h1 class="introInfo"><b>Siming Yang</b></h1>
           <h6 class="introInfo"><b>Web Developer</b></h6>
           <div id="buttonBar">
