fixed width transition

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="aboutSection">
           <h4 class="sectionSubHeader">Introduction</h4>
           <p>
-            Hello, I’m a motivated web developer with over 3 years of experience in diverse development projects, including financial web applications, API testing, and React development. Proficient in a range of technologies including HTML, CSS, JavaScript, and Node.JS, and experienced in agile methodologies and version control with Git. If anything You have seen on this site seems interesting, please feel free to contact me.
+            Hello, I’m a motivated web developer with over 3 years of experience in diverse development projects, including financial web applications, API testing, and React development. Proficient in a range of technologies including HTML, CSS, JavaScript, and Node.JS, and experienced in agile methodologies and version control with Git. If anything you have seen on this site seems interesting, please feel free to contact me.
           </p>
           </div>
         <div class="aboutSection">
