fixed mobile overflow, combined css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Siming Yang Portfolio</title>
     <link rel="icon" type="image/x-icon" href="images/Yeshaha.png">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/HeroHeader.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/pico.min.css">
   </head>
   <body>
@@ -97,7 +94,7 @@
           </div>
           <div class="hidden"> </div>
           <div class="buttonBar">
-            <a class="linkButtons" href="https://github.com/HillsideWealth-CIT/HillsideWealth-AutoStocks" target="_blank" role="button">Github Repo</a>
+            <!-- <a class="linkButtons" href="https://github.com/HillsideWealth-CIT/HillsideWealth-AutoStocks" target="_blank" role="button">Github Repo</a> -->
             <a class="linkButtons" href="https://hillsidewealth-stocks.herokuapp.com/" target="_blank" role="button">Open Site</a>
           </div>
         </div>
