added distributed password cracker

--- a/index.html
+++ b/index.html
@@ -115,7 +115,25 @@
           <div class="hidden"> </div>
           <div class="buttonBar">
             <a class="linkButtons" href="https://github.com/yangsiming99/Portfolio" target="_blank" role="button">Github Repo</a>
-            <a class="linkButtons" href="https://github.com/yangsiming99/Portfolio" target="_blank" role="button">Github Repo</a>
+          </div>
+        </div>
+      </article>
+
+      <article class="project">
+        <img class="projectImage" src="./images/Other/password.png" >
+        <div class="projectDesc">
+          <h4 class="sectionSubHeader">Distributed Password Cracker</h4>
+          <h5 class="sectionSubHeader">Description</h5>
+          <p>
+            A command line tool that aims to develop a scalable and efficient password cracking tool using Python and Sockets. The goal of this project is to leverage the computational power of multiple machines to crack passwords in a distributed and parallel manner, significantly reducing the time required for password recovery.
+          </p>
+          <h5 class="sectionSubHeader">Tech Stack</h5>
+          <div>
+            <div>Python3, Sockets</div>
+          </div>
+          <div class="hidden"> </div>
+          <div class="buttonBar">
+            <a class="linkButtons" href="https://github.com/yangsiming99/8005-project" target="_blank" role="button">Github Repo</a>
           </div>
         </div>
       </article>
